--- a/views/login.html
+++ b/views/login.html
@@ -6,13 +6,7 @@
     <title>Node.js Crash Course</title>
 </head>
 <body>
-    <h1>Home</h1>
+    <h1>Login</h1>
     <h2>Your Path to becoming a Node.js ninja!</h2>
-    <nav>
-        <a href="/">All Courses</a>
-        <a href="/login">Log in</a>
-        <a href="/signup">Sign up</a>
-    </nav>
-    
 </body>
 </html>
